# finetunepc

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  README_TESTING.md  TEST_STATUS.md  check_dependencies.py  conftest.py  conftest_basic.py  debug_factories.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  pytest_simple.ini  requirements-test.txt  requirements.txt  run_basic_tests.py  run_user_tests.py
alembic/: env.py
app/: main.py
app/api/: dependencies.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: auth.py  orders.py  products.py  users.py
app/core/: config.py  database.py  security.py
app/crud/: __init__.py  base.py  crud_address.py  crud_order.py  crud_product.py  crud_product_catalog.py  crud_user.py
app/models/: __init__.py  address.py  audit_log.py  cart.py  coupon.py  inventory.py  order.py  payment.py  product.py  product_image.py  product_variant.py  refund.py  shipment.py  user.py  user_session.py
app/schemas/: __init__.py  auth.py  order.py  product.py  user.py
app/services/: audit_service.py  auth_service.py  cache_service.py  search_service.py
prisma/: schema.prisma  seed.ts
scripts/: run_tests.py
src/: middleware.ts
src/app/: layout.tsx  page.tsx
src/app/(auth)/auth/error/: page.tsx
src/app/(auth)/auth/signin/: page.tsx
src/app/(auth)/auth/signup/: page.tsx
src/app/(shop)/products/: page.tsx
src/app/(shop)/products/[slug]/: page.tsx
src/app/about/: page.tsx
src/app/admin/: page.tsx
src/app/admin/activity-logs/: page.tsx
src/app/admin/customers/: page.tsx
src/app/admin/orders/: page.tsx
src/app/admin/products/: page.tsx
src/app/admin/products/create/: page.tsx
src/app/admin/reviews/: page.tsx
src/app/admin/services/: page.tsx
src/app/admin/services/[serviceId]/: page.tsx
src/app/admin/services/analytics/: page.tsx
src/app/api/admin/activity-logs/: route.ts
src/app/api/admin/categories/: route.ts
src/app/api/admin/dashboard/: route.ts
src/app/api/admin/orders/: route.ts
src/app/api/admin/products/: route.ts
src/app/api/admin/products/[productId]/: route.ts
src/app/api/admin/reviews/: route.ts
src/app/api/admin/services/: route.ts
src/app/api/admin/users/: route.ts
src/app/api/cart/: route.ts
src/app/api/categories/: route.ts
src/app/api/emails/order-confirmation/: route.ts
src/app/api/emails/service-cancelled/: route.ts
src/app/api/emails/service-confirmation/: route.ts
src/app/api/emails/service-updated/: route.ts
src/app/api/orders/: route.ts
src/app/api/orders/[orderId]/: route.ts
src/app/api/products/: route.ts
src/app/api/products/[slug]/: route.ts
src/app/api/services/: route.ts
src/app/api/services/[serviceId]/: route.ts
src/app/api/services/available-slots/: route.ts
src/app/api/stripe/confirm-payment/: route.ts
src/app/api/stripe/create-payment-intent/: route.ts
src/app/api/technician/dashboard/: route.ts
src/app/api/uploadthing/: core.ts  route.ts
src/app/checkout/: page.tsx
src/app/checkout/confirmation/[orderId]/: page.tsx
src/app/contact/: page.tsx
src/app/orders/: page.tsx
src/app/privacy/: page.tsx
src/app/profile/: page.tsx
src/app/services/: page.tsx
src/app/services/[serviceId]/: page.tsx
src/app/services/[serviceId]/edit/: page.tsx
src/app/services/book/: page.tsx
src/app/technician/: page.tsx
src/app/terms/: page.tsx
src/components/admin/: admin-layout.tsx  product-image-gallery.tsx  review-import.tsx
src/components/auth/: user-menu.tsx
src/components/layout/: cart-drawer.tsx  footer.tsx  header.tsx  page-container.tsx
src/components/products/: product-card.tsx  product-filters.tsx  product-grid.tsx
src/components/ui/: skeleton.tsx  toast.tsx
src/lib/: activity-logger.ts  auth.ts  db-pool.ts  stripe.ts  uploadthing.ts
src/store/: cart-store.ts
src/types/: index.ts  next-auth.d.ts
tests/: test_basic.py
tests/fixtures/: factories.py  mocks.py
tests/integration/: test_admin_user_endpoints.py  test_auth_endpoints.py  test_auth_flows.py  test_product_catalog.py  test_user_endpoints.py
tests/unit/: test_address_crud.py  test_audit_service.py  test_auth_service.py  test_cache_service.py  test_models.py  test_search_service.py  test_security.py  test_security_simple.py  test_user_crud.py  test_user_models.py
(+8 files in other folders)
